practice/zivasera/service-catalog-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-catalog
  namespace: dev
spec:
    type: NodePort
    ports:
      - port: 12090
        targetPort: 8080
        nodePort: 30090
    selector:
      #labels of metadata.labels in matching pods
      app: app-catalog
