practice/zivasera/service-mysql-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mysql-catalog
  namespace: dev
spec:
  type: ClusterIP
  selector:
    name: mysql-catalog
  ports:
    - port: 3306
      targetPort: 3306
