practice/zivasera/ingress-resource-router.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-router
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /catalog
    nginx.ingress.kubernets.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /catalog/*
            backend:
              serviceName: service-app-catalog
              servicePort: http
